# TavernNext-ARK

./: .gitattributes  .gitignore  .gitmodules  ARKTS_API_DETAILS.md  ARKTS_BACKEND_README.md  LAN_SYNC_COMPAT_ANALYSIS.md  LAN_SYNC_IMPLEMENTATION_PLAN.md  MIGRATION_REQUIREMENTS.md  MODEL_TOKENIZER_VECTOR_PLAN.md  PARALLEL_REPLY_GENERATION_DESIGN.md  PROVIDER_BEHAVIOR_VALIDATION.md  README.md  TAURITAVERN_PROVIDER_LOGIC.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: ARKTS_API_DETAILS.md  ARKTS_BACKEND_README.md  BUG_ANALYSIS_DATA_LOSS_ON_BACKGROUND.md  LAN_SYNC_COMPAT_ANALYSIS.md  LAN_SYNC_IMPLEMENTATION_PLAN.md  MODEL_TOKENIZER_VECTOR_PLAN.md  PARALLEL_REPLY_GENERATION_DESIGN.md  PARALLEL_REPLY_GENERATION_PLAN.md  PROVIDER_BEHAVIOR_VALIDATION.md  STARTUP_TIMING_DEBUG.md  TAURITAVERN_PROVIDER_LOGIC.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  git_native.cpp  tokenizer_native.cpp
entry/src/main/cpp/cmake/: FindmbedTLS.cmake
entry/src/main/cpp/types/libtavern_git/: Index.d.ts  oh-package.json5
entry/src/main/cpp/types/libtavern_tokenizer/: Index.d.ts  oh-package.json5
entry/src/main/ets/backend/: ApplicationStateService.ets  BackendService.ets  CancellationToken.ets  ChatBrowserService.ets  CryptoUtils.ets  DataDirectories.ets  DataRestoreProgressService.ets  DefaultContentSeeder.ets  ExtensionsService.ets  FileStore.ets  GitService.ets  HttpServer.ets  HttpTypes.ets  JsonUtils.ets  LlmBackgroundTaskService.ets  MediaService.ets  ModelProxyService.ets  MultipartParser.ets  PathUtils.ets  PngCardStore.ets  RemoteHttpClient.ets  SecretsService.ets  ShareExportService.ets  ShellThemeService.ets  SillyTavernCore.ets  StaticFileServer.ets  TokenizerService.ets  UsersService.ets  VectorService.ets
entry/src/main/ets/backend/model/: ChatCompletionConfigResolver.ets  ChatCompletionService.ets  ChatCompletionTypes.ets  CustomApiFormat.ets  CustomParameters.ets  JsonHelpers.ets  LlmApiLogger.ets  PromptCaching.ets  SourceRegistry.ets  VertexAiAuth.ets
entry/src/main/ets/backend/model/http/: ChatCompletionRepository.ets  ResponseNormalizers.ets  StreamNormalizers.ets
entry/src/main/ets/backend/model/payload/: ClaudePayloadBuilder.ets  CoherePayloadBuilder.ets  CustomPayloadBuilder.ets  DeepSeekPayloadBuilder.ets  GeminiInteractionsPayloadBuilder.ets  GeminiPayloadBuilder.ets  OpenAiCompatiblePayloadBuilders.ets  OpenAiPayloadBuilder.ets  OpenAiResponsesPayloadBuilder.ets  OpenRouterPayloadBuilder.ets  PayloadBuilderRegistry.ets  PromptPostProcessing.ets  Shared.ets
entry/src/main/ets/backend/model/payload/claude/: Builder.ets  Contract.ets  Messages.ets  Params.ets  ToolCalls.ets  Tools.ets  Validation.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  WebDialogService.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/rawfile/public/: index.html  lib.js  script.js  style.css
entry/src/main/resources/rawfile/public/css/: mobile-styles.css  welcome.css  world-info.css
entry/src/main/resources/rawfile/public/locales/: zh-cn.json  zh-tw.json
entry/src/main/resources/rawfile/public/scripts/: browser-fixes.js  chats.js  extensions.js  ohos-llm-api-logs.js  openai.js  power-user.js  reasoning.js  sse-stream.js  tokenizers.js  welcome-screen.js  world-info.js
entry/src/main/resources/rawfile/public/scripts/templates/: welcomePanel.html
native/tavern_tokenizer_ffi/: Cargo.toml
native/tavern_tokenizer_ffi/src/: lib.rs
scripts/: generate-long-chat-fixture.mjs  install-git-hooks.ps1  sanitize-build-profile.ps1
test-data/long-chat-300/: README.md  manifest.json
test-data/long-chat-300/chats/Mock_Long_Chat_300/: Mock_Long_Chat_300_300_rounds.jsonl
